Java 21: proper executors handling, virtual threads in some locations.
Request: MO
Change-Id: I4df67d2dfc33063ad3c375bbac0b382f0c3081a7